# ezs3

./: .gitignore  Justfile  LICENSE  README.md  USAGE.md  pyproject.toml
src/ezs3/: __init__.py  _bucket.py  _client.py  _consistency.py  _exceptions.py  _hashing.py  _managed.py  _path.py
src/tests/: conftest.py  test_bucket.py  test_client.py  test_consistency.py  test_hashing.py  test_integration.py  test_managed.py  test_path_io.py  test_path_pure.py
