[project]
name = "ezs3"
version = "1.0.0"
description = "Type-safe, Path-like S3 utilities built on top of boto3."
keywords = ["aws", "amazon", "s3", "storage", "data", "download", "upload"]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
urls = {
    GitHub = "https://github.com/nachollica/ezs3",
    License = "https://github.com/nachollica/ezs3/blob/master/LICENSE",
}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
authors = [
    { name = "Ignacio Gonzalez", email = "nachollica@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.37.38",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "tox>=4.25.0",
    "ipython>=8.12.3",
]

# Build

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ezs3"]

# Publishing

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

# Testing

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
addopts = [
    "--cov",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src/ezs3"]
omit = [
    "**/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
sort = "Cover"

[tool.tox]
requires = ["tox>=4", "tox-uv"]
skip_missing_interpreters = false
env_list = [
    "py39",
    "py310",
    "py311",
    "py312",
    "py313",
    "py314",
]

[tool.tox.env_run_base]
dependency_groups = ["dev"]
commands = [
    ["pytest"],
]

# Linters

[tool.ruff]
target-version = "py39"
line-length = 99
exclude = [".venv/"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",        # Detect shadowing of Python builtins
    "B",        # Catch likely bugs and bad design (flake8-bugbear)
    "E",        # pycodestyle errors
    "F",        # Pyflakes: unused/undefined names, import errors
    "I",        # Sort and group imports (isort)
    "N",        # PEP 8 naming conventions
    "S",        # Security checks (bandit)
    "T",        # Disallow `print`/`pdb`/`breakpoint` calls
    "INP",      # Disallow implicit namespace packages (require __init__.py)
]
ignore = [
    "E731",     # Lambda assignment instead of `def`
]

[tool.ruff.lint.per-file-ignores]
"src/tests/*" = ["S", "INP001"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
exclude = [".venv/"]
